--- a/app.json
+++ b/app.json
@@ -7,8 +7,8 @@
         "video-extract",
         "pyrogram"
     ],
-    "repository": "https://github.com/SudoR2spr/txt-leech-bot",
-    "success_url": "https://t.me/Opleech_WD",
+    "repository": "https://github.com",
+    "success_url": "https://t.me/zkp143",
     "stack": "heroku-22",
     "env": {
         "API_ID": {
